# epitech-api-rs

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: ci.yml
src/: constants.rs  error.rs  lib.rs  response.rs  tests.rs
