[package]
name = "epitech_api"
version = "0.1.15"
authors = ["Hirevo <nipolom@live.fr>"]
description = "A library for interacting with the EPITECH intranet API built on top of reqwest"
readme = "README.md"
keywords = ["epitech", "api", "intranet"]
categories = ["web-programming"]
repository = "https://github.com/Hirevo/epitech-api-rs"
license = "MIT"

[badges]
circle-ci = { repository = "Hirevo/epitech-api-rs", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
reqwest = "^0.9.3"
chrono = "^0.4.6"
serde = "^1.0.80"
serde_derive = "^1.0.80"
serde_json = "^1.0.32"
hyper = "^0.12.12"
lazy_static = "^1.1.0"
