[package]
name = "epitech_api"
version = "0.1.17"
edition = "2018"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "A library for interacting with the EPITECH intranet API built on top of reqwest"
readme = "README.md"
keywords = ["epitech", "api", "web", "intranet"]
categories = ["web-programming", "api-bindings"]
repository = "https://github.com/Hirevo/epitech-api-rs"
license = "MIT"

[badges]
circle-ci = { repository = "Hirevo/epitech-api-rs", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
reqwest = { version = "0.9.22" }
chrono = { version = "0.4.9" }
serde = { version = "1.0.101", features = ["derive"] }
json = { package = "serde_json", version = "1.0.41" }
thiserror = { version = "1.0.1" }
enum-iterator = { version = "0.5.0" }
