[package]
name = "epitech_api"
version = "0.2.0"
edition = "2018"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "A library for interacting with the EPITECH intranet API"
keywords = ["epitech", "api", "web", "intranet", "async"]
categories = ["web-programming", "api-bindings", "asynchronous"]
repository = "https://github.com/Hirevo/epitech-api-rs"
documentation = "https://docs.rs/epitech_api"
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
reqwest = "0.10.1"
chrono = "0.4.10"
serde = { version = "1.0.104", features = ["derive"] }
json = { package = "serde_json", version = "1.0.44" }
thiserror = "1.0.9"
enum-iterator = "0.6.0"

[dev-dependencies]
tokio = { version = "0.2.9", features = ["macros"] }
futures = "0.3.1"
